src/main/java/com/example/Structural/Bridge/good/Triangle.java
package com.example.Structural.Bridge.good;

public class Triangle extends AbstractShape{
    @Override
    void getShape() {
//        System.out.println("triangle with "+color.yellowColor());
    }

    @Override
    public String redColor() {
        return null;
    }

    @Override
    public String greenColor() {
        return null;
    }

    @Override
    public String whiteColor() {
        return null;
    }

    @Override
    public String blackColor() {
        return null;
    }

    @Override
    public String yellowColor() {
        return null;
    }
}
