src/main/java/com/example/Structural/Bridge/bad/RedSquare.java
package com.example.Structural.Bridge.bad;

public class RedSquare implements Shape{
    @Override
    public String getShape() {
        return "this is an square shape with red color!";
    }
}
